// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > # Of Files Generated 1`] = `19`;

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > msdocs/priorscriptapi/TOC.yml 1`] = `
"  - name: stable-module 1.x.x
    items:
    - name: stable-module 1.x.x
      href: stable-module-1xx/stable-module.md
    - name: StableEnumWithPrereleaseConstants
      href: stable-module-1xx/StableEnumWithPrereleaseConstants.md
    - name: StableClass
      href: stable-module-1xx/StableClass.md
    - name: StableInterface
      href: stable-module-1xx/StableInterface.md
"
`;

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > msdocs/priorscriptapi/stable-module-1xx/StableClass.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: stable-module-1xx.StableClass Class
description: Contents of the stable-module.StableClass class (Version 1.x.x).
---
# StableClass Class (Version 1.x.x)

> [!IMPORTANT]
> This documentation is for an older version of this module. Go to the latest documentation [*here*](../../../scriptapi/stable-module/StableClass.md).
"
`;

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > msdocs/priorscriptapi/stable-module-1xx/StableEnumWithPrereleaseConstants.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: stable-module-1xx.StableEnumWithPrereleaseConstants Enumeration
description: Contents of the stable-module.StableEnumWithPrereleaseConstants enumeration (Version 1.x.x).
---
# StableEnumWithPrereleaseConstants Enumeration (Version 1.x.x)

> [!IMPORTANT]
> This documentation is for an older version of this module. Go to the latest documentation [*here*](../../../scriptapi/stable-module/StableEnumWithPrereleaseConstants.md).

## Constants
### **stableVal**
\`stableVal = 1\`
"
`;

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > msdocs/priorscriptapi/stable-module-1xx/StableInterface.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: stable-module-1xx.StableInterface Interface
description: Contents of the stable-module.StableInterface class (Version 1.x.x).
---
# StableInterface Interface (Version 1.x.x)

> [!IMPORTANT]
> This documentation is for an older version of this module. Go to the latest documentation [*here*](../../../scriptapi/stable-module/StableInterface.md).
"
`;

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > msdocs/priorscriptapi/stable-module-1xx/stable-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: stable-module-1xx Module
description: Contents of the stable-module module (Version 1.x.x)
---
# \`stable-module\` Module (Version 1.x.x)

> [!IMPORTANT]
> This documentation is for an older version of this module. Go to the latest documentation [*here*](../../../scriptapi/stable-module/stable-module.md).

## Manifest Details
\`\`\`json
{
    "module_name": "stable-module",
    "version": "1.0.0"
}
\`\`\`

## Available Versions
- \`1.0.0\`

## Enumerations
- [StableEnumWithPrereleaseConstants](StableEnumWithPrereleaseConstants.md)

## Classes
- [StableClass](StableClass.md)

## Interfaces
- [StableInterface](StableInterface.md)
"
`;

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > msdocs/scriptapi/TOC.yml 1`] = `
"  - name: prerelease-module
    items:
    - name: prerelease-module
      href: prerelease-module/prerelease-module.md
    - name: prerelease-module Changelog
      href: prerelease-module/changelog.md
  - name: stable-module
    items:
    - name: stable-module
      href: stable-module/stable-module.md
    - name: stable-module Changelog
      href: stable-module/changelog.md
    - name: PrereleaseEnum
      href: stable-module/PrereleaseEnum.md
    - name: StableEnumWithPrereleaseConstants
      href: stable-module/StableEnumWithPrereleaseConstants.md
    - name: PrereleaseClass
      href: stable-module/PrereleaseClass.md
    - name: StableClass
      href: stable-module/StableClass.md
    - name: PrereleaseInterface
      href: stable-module/PrereleaseInterface.md
    - name: StableInterface
      href: stable-module/StableInterface.md
"
`;

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > msdocs/scriptapi/prerelease-module/changelog.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: prerelease-module Changelog
description: Changelog of the \`prerelease-module\` module
---
# \`prerelease-module\` Changelog

## Version Changes
- [1.0.0-beta](#100-beta)

## 1.0.0-beta
#### Added \`prerelease-module\` Module
"
`;

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > msdocs/scriptapi/prerelease-module/prerelease-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: prerelease-module Module
description: Contents of the prerelease-module module
monikerRange: "=minecraft-bedrock-experimental"
---
# \`prerelease-module\` Module

> [!CAUTION]
> This module is still in pre-release.  It may change or it may be removed in future releases.

## [Changelog](changelog.md)

## Manifest Details
\`\`\`json
{
    "module_name": "prerelease-module",
    "version": "1.0.0-beta"
}
\`\`\`
This is version 1.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`1.0.0-beta\`
"
`;

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > msdocs/scriptapi/stable-module/PrereleaseClass.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: stable-module.PrereleaseClass Class
description: Contents of the stable-module.PrereleaseClass class.
monikerRange: "=minecraft-bedrock-experimental"
---
# PrereleaseClass Class

> [!CAUTION]
> This class is still in pre-release.  Its signature may change or it may be removed in future releases.
"
`;

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > msdocs/scriptapi/stable-module/PrereleaseEnum.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: stable-module.PrereleaseEnum Enumeration
description: Contents of the stable-module.PrereleaseEnum enumeration.
monikerRange: "=minecraft-bedrock-experimental"
---
# PrereleaseEnum Enumeration

> [!CAUTION]
> This enum is still in pre-release.  Its signature may change or it may be removed in future releases.

## Constants
### **val1**
\`val1 = 1\`
### **val2**
\`val2 = 2\`
"
`;

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > msdocs/scriptapi/stable-module/PrereleaseInterface.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: stable-module.PrereleaseInterface Interface
description: Contents of the stable-module.PrereleaseInterface class.
monikerRange: "=minecraft-bedrock-experimental"
---
# PrereleaseInterface Interface

> [!CAUTION]
> This interface is still in pre-release.  Its signature may change or it may be removed in future releases.
"
`;

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > msdocs/scriptapi/stable-module/StableClass.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: stable-module.StableClass Class
description: Contents of the stable-module.StableClass class.
---
# StableClass Class

## Properties

::: moniker range="=minecraft-bedrock-experimental"
### **prereleaseProperty**
\`prereleaseProperty: number;\`

Type: *number*

> [!CAUTION]
> This property is still in pre-release.  Its signature may change or it may be removed in future releases.

Notes:
  - This property can't be used in read-only mode.
::: moniker-end

## Methods
::: moniker range="=minecraft-bedrock-experimental"
- [prereleaseMethod](#prereleasemethod)
::: moniker-end

::: moniker range="=minecraft-bedrock-experimental"
### **prereleaseMethod**
\`
prereleaseMethod(): number
\`

**Returns** *number*

> [!CAUTION]
> This function is still in pre-release.  Its signature may change or it may be removed in future releases.
  
Notes:
- This function can't be called in read-only mode.
::: moniker-end
"
`;

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > msdocs/scriptapi/stable-module/StableEnumWithPrereleaseConstants.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: stable-module.StableEnumWithPrereleaseConstants Enumeration
description: Contents of the stable-module.StableEnumWithPrereleaseConstants enumeration.
---
# StableEnumWithPrereleaseConstants Enumeration

## Constants
### **stableVal**
\`stableVal = 1\`
### **prereleaseVal**
\`prereleaseVal = 2\`
"
`;

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > msdocs/scriptapi/stable-module/StableInterface.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: stable-module.StableInterface Interface
description: Contents of the stable-module.StableInterface class.
---
# StableInterface Interface

## Properties

::: moniker range="=minecraft-bedrock-experimental"
### **prereleaseMember**
\`prereleaseMember: number;\`

Type: *number*

> [!CAUTION]
> This property is still in pre-release.  Its signature may change or it may be removed in future releases.
::: moniker-end
"
`;

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > msdocs/scriptapi/stable-module/changelog.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: stable-module Changelog
description: Changelog of the \`stable-module\` module
---
# \`stable-module\` Changelog

## Version Changes
- [2.0.0-beta](#200-beta)
- [1.0.0](#100)

## 2.0.0-beta
#### Added *[\`PrereleaseClass\`](PrereleaseClass.md)*
#### Changed *[\`StableClass\`](StableClass.md)*
- Added property *[\`prereleaseProperty\`](StableClass.md#prereleaseproperty)*
- Added function *[\`prereleaseMethod\`](StableClass.md#prereleasemethod)*
#### Added function \`prereleaseFunction\`
#### Added enum [\`PrereleaseEnum\`](PrereleaseEnum.md)
#### Changed enum [\`StableEnumWithPrereleaseConstants\`](StableEnumWithPrereleaseConstants.md)
- Added value \`prereleaseVal\`
#### Added object \`prereleaseObject\`
#### Added constant \`prereleaseConstant\`
## 1.0.0
#### Added \`stable-module\` Module
"
`;

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > msdocs/scriptapi/stable-module/stable-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: stable-module Module
description: Contents of the stable-module module
---
# \`stable-module\` Module

## [Changelog](changelog.md)

## Manifest Details
\`\`\`json
{
    "module_name": "stable-module",
    "version": "2.0.0-beta"
}
\`\`\`
This is version 2.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`2.0.0-beta\`

### Prior Versions

The following API versions are from a major version that is documented here: [*stable-module*](../../../priorscriptapi/stable-module-1xx/stable-module.md):
- \`1.0.0\`


## Enumerations
- [PrereleaseEnum](PrereleaseEnum.md)
- [StableEnumWithPrereleaseConstants](StableEnumWithPrereleaseConstants.md)

## Classes
- [PrereleaseClass](PrereleaseClass.md)
- [StableClass](StableClass.md)

## Interfaces
- [PrereleaseInterface](PrereleaseInterface.md)
- [StableInterface](StableInterface.md)

## Functions

::: moniker range="=minecraft-bedrock-experimental"
### **prereleaseFunction**
\`
prereleaseFunction(): boolean
\`

**Returns** *boolean*

> [!CAUTION]
> This function is still in pre-release.  Its signature may change or it may be removed in future releases.
  
Notes:
- This function can't be called in read-only mode.
::: moniker-end

## Constants

::: moniker range="=minecraft-bedrock-experimental"
### **prereleaseConstant**
\`static read-only prereleaseConstant = 1;\`

Type: *number*

> [!CAUTION]
> This property is still in pre-release.  Its signature may change or it may be removed in future releases.
::: moniker-end

## Objects
  
::: moniker range="=minecraft-bedrock-experimental"
### **prereleaseObject**
\`static read-only prereleaseObject: string;\`

Type: *string*

> [!CAUTION]
> This property is still in pre-release.  Its signature may change or it may be removed in future releases.
::: moniker-end
"
`;

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > typescript/prerelease-module@1.0.0-beta.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @beta
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "prerelease-module",
 *   "version": "1.0.0-beta"
 * }
 * \`\`\`
 *
 */
"
`;

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > typescript/stable-module@1.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "stable-module",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
export enum StableEnumWithPrereleaseConstants {
    stableVal = 1,
}

export class StableClass {
    private constructor();
}

export interface StableInterface {}
"
`;

exports[`Pre-release Warning > Properly generates documentation with a warning for pre-release modules > typescript/stable-module@2.0.0-beta.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @beta
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "stable-module",
 *   "version": "2.0.0-beta"
 * }
 * \`\`\`
 *
 */
/**
 * @beta
 */
export enum PrereleaseEnum {
    val1 = 1,
    val2 = 2,
}

export enum StableEnumWithPrereleaseConstants {
    stableVal = 1,
    /**
     * @beta
     */
    prereleaseVal = 2,
}

/**
 * @beta
 */
export class PrereleaseClass {
    private constructor();
}

export class StableClass {
    private constructor();
    /**
     * @beta
     * @remarks
     * This property can't be used in read-only mode.
     *
     */
    prereleaseProperty: number;
    /**
     * @beta
     * @remarks
     * This function can't be called in read-only mode.
     *
     */
    prereleaseMethod(): number;
}

/**
 * @beta
 */
export interface PrereleaseInterface {}

export interface StableInterface {
    /**
     * @beta
     */
    prereleaseMember: number;
}

/**
 * @beta
 * @remarks
 * This function can't be called in read-only mode.
 *
 */
export function prereleaseFunction(): boolean;
/**
 * @beta
 */
export const prereleaseConstant = 1;
/**
 * @beta
 */
export const prereleaseObject: string;
"
`;
